--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.2",
+    "supabase": "^2.65.6",
     "tailwindcss": "^3.4.17"
   },
   "dependencies": {
